# Ubuntu-Hello

./: .gitignore  README.md  agent.md  generate_badges.py  install.sh  meson.build  meson.options  skills.md  uninstall.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check.yml  ppa-release.yml
debian/: changelog  control  copyright  rules  ubuntu-hello-gtk.install  ubuntu-hello-gtk.postinst  ubuntu-hello.install  ubuntu-hello.postinst  ubuntu-hello.prerm
docs/: ARCHITECTURE.md  DEVELOPER_GUIDE.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.0.1_github_description.md
tests/: conftest.py  test_auth_helper.py  test_authsticky_window.py  test_gtk_tabs.py  test_install_download.py  test_onboarding.py  test_paths_factory.py  test_recorders.py  test_rubberstamps.py  test_snapshot.py
ubuntu-hello/: ubuntu-hello.1
ubuntu-hello-gtk/: meson.build  ubuntu-hello-gtk.desktop
ubuntu-hello-gtk/debian/: changelog  control  copyright  install  postinst  ubuntu-hello-gtk.links  ubuntu-hello-gtk.lintian-overrides
ubuntu-hello-gtk/src/: auth_helper.py  authsticky.py  init.py  main.glade  onboarding.glade  onboarding.py  paths.py.in  tab_keyring.py  tab_models.py  tab_video.py  window.py
ubuntu-hello-gtk/src/polkit/: com.github.ventura8.ubuntu-hello-gtk.policy.in
ubuntu-hello/archlinux/ubuntu-hello/: PKGBUILD
ubuntu-hello/debian/: changelog  control  copyright  install  postinst  preinst  prerm  rules  ubuntu-hello.lintian-overrides  ubuntu-hello.manpages
ubuntu-hello/src/: cli.py  compare.py  config.ini  download_models.py  install_config.py  meson.build  paths.py.in  snapshot.py
ubuntu-hello/src/autocomplete/: ubuntu-hello.in
ubuntu-hello/src/cli/: add.py  clear.py  config.py  disable.py  keyring.py  list.py  remove.py  set.py  test.py
ubuntu-hello/src/pam/: README.md  main.cc  main.hh  meson.build
ubuntu-hello/src/pam-config/: ubuntu-hello-verify  ubuntu-hello.in
ubuntu-hello/src/recorders/: ffmpeg_reader.py  pyv4l2_reader.py  v4l2.py  video_capture.py
ubuntu-hello/src/rubberstamps/: __init__.py  nod.py
